--- a/template.tmpl
+++ b/template.tmpl
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>Untitled Custom SSG</title>
 </head>
-<body>
-</body>
+  <body>
+    <p>
+      Content: {{ .Content }} 
+    </p>
+  </body>
 </html>
